--- a/release/src/router/dnsmasq/CHANGELOG
+++ b/release/src/router/dnsmasq/CHANGELOG
@@ -1,11 +1,28 @@
+version 2.72
+            Add ra-advrouter mode, for RFC-3775 mobile IPv6 support.
+
+	    Add support for "ipsets" in *BSD, using pf. Thanks to 
+	    Sven Falempim for the patch.
+
+	    Fix race condition which could lock up dnsmasq when an 
+	    interface goes down and up rapidly. Thanks to Conrad 
+	    Kostecki for helping to chase this down.
+
+	    Add DBus methods SetFilterWin2KOption and SetBogusPrivOption
+	    Thanks to the Smoothwall project for the patch.
+
+	    Fix failure to build against Nettle-3.0. Thanks to Steven 
+	    Barth for spotting this and finding the fix. 
+	    
+
 version 2.71
-            Subtle change to error handling to help DNSSEC validation
-	    when servers fail to provide NODATA answers for
+            Subtle change to error handling to help DNSSEC validation 
+	    when servers fail to provide NODATA answers for 
 	    non-existent DS records.
 
 	    Tweak code which removes DNSSEC records from answers when
 	    not required. Fixes broken answers when additional section
-	    has real records in it. Thanks to Marco Davids for the bug
+	    has real records in it. Thanks to Marco Davids for the bug 
 	    report.
 
 	    Fix DNSSEC validation of ANY queries. Thanks to Marco Davids
@@ -21,7 +38,7 @@ version 2.70
 	    compiled with DNSSEC support, but running without DNSSEC
 	    enabled. Thanks to Manish Sing for spotting that one.
 
-	    Fix regression which broke ipset functionality. Thanks to
+	    Fix regression which broke ipset functionality. Thanks to 
 	    Wang Jian for the bug report.
 
 
