--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,56 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_2-18BCj9527  (xx-July-2016)
+- CHANGED: openvpn: update to 2.3.11
+- CHANGED: openssl: update to 1.0.2h
+- CHANGED: dnsmasq: update to 2.76final
+- CHANGED: (multiple backports) support codel/fq_codel on ARM
+- CHANGED: (backport) kernel-arm: patch mirred so it will preserve kernel marks
+- CHANGED: (backport) kernel-arm: sync netfilter modules with fixes from kernel 4.0
+- CHANGED: webui: only reboot on qos change when required - remove restart_firewall on other cases
+- CHANGED: vts: (backport) no need to reboot vts/port forwards for ctf enabled
+- CHANGED: kernel: (backport) activate 64M ROOTFS and TEMPROOTFS for ARM
+- CHANGED: nat: change default NAT loopback method from Merlin to ASUS
+* CHANGED: improvements to traditional qos
+  - traditional qos download class bandwidth changes
+  - add quantum to download class
+  - adjust mtu/quantum to account for hardware header length
+  - restore all marks in PREROUTING instead of only from input eth0
+  - backport r2q calculation (tomato)
+  - update qos police filters
+  - workaround for bug in restore-mark
+  - allow up to 15 marks for traditional qos for custom rules
+  - change iptables to use MARK/set-mark instead of CONNMARK/set-return for traditional qos
+  - remove default from tc class since its controlled by iptables
+  - change download filter protocol to all to cover ip and ipv6
+  - add option to control ATM overhead (backport from Merlin/Tomato)
+* CHANGED: openvpn: only set persist-tun if not DNS exclusive mode
+* CHANGED: dnsmasq: add priority debug syslog for failed queries
+* CHANGED: httpd: add port to login messages; add disconnect logout message
+* CHANGED: webui: sort DHCP leases syslog by time remaining
+* CHANGED: webui: add low nvram notification in banner
+* CHANGED: qos: update start complete log message for tqos vs bwl
+* CHANGED: kernel: r2q change message from priority WARNING to priority DEBUG
+* CHANGED: busybox: include mktemp (required for EasyRSA)
+* CHANGED: busybox: add time utility
+* CHANGED: wget: replace busybox wget and add https support
+* CHANGED: dnsfilter: prevent adding unneccessary rules which match the global filter mode
+* CHANGED: dnsmasq: add priority debug syslog for failed queries
+* CHANGED: wan: changed default DHCP query frequency from Aggressive to Normal
+* CHANGED: dhcpc: (upstream) use client IP address as source address for DHCP renew/rebind messages
+* FIXED: watchdog: don't repeatedly try and stop ntpd if not started
+* FIXED: webui: fix typo in Wireless Log page
+* FIXED: httpd: fix duplicate login syslog messages
+* FIXED: qos: flush ebtables nat at start of bandwidth rules generation
+* FIXED: qos: only add rule for Merlin NAT loopback when Merlin NAT loopback enabled
+* FIXED: qos: open file after clearing for bandwidth_limiter rules generation
+* FIXED: qos: properly clean up tc rules on bandwidth limiter qos stop
+* FIXED: qos: fix delete row for traditional qos rules
+* FIXED: webui: fix priority level assignment on qos bandwidth limiter
+* FIXED: webui: wrong rule deleted in traditional qos rules
+
+
 374.43_2-17E8j9527  (9-April-2016)
 * CHANGED: No longer flush the mangle table on QOS start, just delete any existing QOS rules
 * CHANGED: Rewrite VPN exclusive mode/ISP DNS code
@@ -136,7 +186,7 @@ Changelog
 - FIXED: Fix resource leaks in lpd test
 - FIXED: OpenVPN server subnet topology is only valid in TLS-TUN mode
 - FIXED: Dropbear - SSH Tunnel drops when accessing invalid resource
-- FIXED: Minidlna – Selected upstream server discovery fixes
+- FIXED: Minidlna â€“ Selected upstream server discovery fixes
 - FIXED: SSH buffer overflow for keys greater then 2048 characters
 - FIXED: Web server URL handler buffer overflow (ASUS-Security)
 - FIXED: Web server accept language buffer overflow (ASUS-Security)
