dhcpv6: upstream from debian 20080615-13

--- a/release/src/router/dhcpv6/dhcp6c.8
+++ b/release/src/router/dhcpv6/dhcp6c.8
@@ -40,6 +40,7 @@
 .Op Fl Ddfi
 .Op Fl T Ar LL|LLT
 .Op Fl p Ar pid-file
+.Op Fl P Ar profile
 .Ar interface
 .Op Ar interfaces...
 .\"
@@ -99,6 +100,14 @@ Use
 .Ar pid-file
 to dump the process ID of
 .Nm .
+.It Fl P Ar profile
+Use the given
+.Ar profile
+defined in the
+.Nm
+configuration file for
+.Ar interfaces
+which do not have a specific configuration.
 .El
 .Pp
 The program will daemonize itself on invocation unless the
