--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,13 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_2-20E4j9527  (23-October-2016)
+* CHANGED: webui: resize data windows for log status pages
+- FIXED: kernel-arm: (backport) Patch 2.6.36 kernel against CVE-2016-5195
+- FIXED: ipset_arm: (backport) some build systems try to link against the wrong library, ensure we do link against our built libmnl.so
+* FIXED: wan6: reset force address request flag on wan6 down
+
+
 374.43_2-20E3j9527  (18-October-2016)
 * CHANGED: networkmap: backport some additional ASUS optimizations
 * FIXED: qos: use correct protocol ip for u32 matches
