--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,11 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_2-20E8j9527  (31-October-2016)
+- CHANGED: usb: update ftp daemon start method
+- CHANGED: vsftpd: (backport) add ssl support
+
+
 374.43_2-20E7j9527  (28-October-2016)
 - CHANGED: openvpn: (backport) add webui setting for the auth digest alg to OpenVPN client and server
 * CHANGED: ipv6: change default for sending ia-na
