--- a/release/src/router/dnscrypt/ChangeLog
+++ b/release/src/router/dnscrypt/ChangeLog
@@ -1,3 +1,1163 @@
+* Thu Dec 29 09:14:49 2016 +0100
+
+    Do not use --high-entropy-va on i686
+
+* Thu Dec 29 09:03:22 2016 +0100
+
+    Typo
+
+* Thu Dec 29 08:42:29 2016 +0100
+
+    Update ChangeLog
+
+* Thu Dec 29 08:41:30 2016 +0100
+
+    Temporarily remove cs-uswest
+
+    Since a new release is being tagged, this resolver cannot be included
+    in the default list.
+
+* Thu Dec 29 08:32:43 2016 +0100
+
+    Update ChangeLog
+
+* Thu Dec 29 08:32:35 2016 +0100
+
+    + TCP for hostip
+
+* Thu Dec 29 08:31:04 2016 +0100
+
+    hostip: retry using TCP on truncated responses, dont change qname case
+
+* Thu Dec 29 08:16:32 2016 +0100
+
+    Update some m4 scripts
+
+* Thu Dec 29 07:48:18 2016 +0100
+
+    win[32|64]-xcompile: Force some link options even for dependencies
+
+* Thu Dec 29 07:38:55 2016 +0100
+
+    Tweak AX_CHECK_COMPILE_FLAG to also try to link the test program
+
+    This simplifies the main configure script.
+
+    Also try to use -fstack-protector-strong if available instead of
+    -fstack-protector-all
+
+* Thu Dec 29 07:13:36 2016 +0100
+
+    The libsodium copy doesn't require POSIX threads on Windows
+
+* Thu Dec 29 00:33:08 2016 +0100
+
+    Add oas.* and oascentral.* (ads)
+
+* Thu Dec 29 00:12:29 2016 +0100
+
+    Don't assume that the proxy is in /usr/local for the systemd service
+
+    People compiling the proxy themselves won't use systemd right away,
+    and people using dnscrypt-proxy via systemd are likely to use system
+    packages.
+
+* Thu Dec 29 00:07:51 2016 +0100
+
+    Update ChangeLog
+
+* Thu Dec 29 00:07:09 2016 +0100
+
+    Remove man pages, and .la files from the Windows distribution files
+
+* Wed Dec 28 23:56:51 2016 +0100
+
+    msys*: add the CSV + pub file to the root directory
+
+* Wed Dec 28 23:44:31 2016 +0100
+
+    Avoid ntohl() in example-ldns-blocking
+
+* Wed Dec 28 23:26:23 2016 +0100
+
+    Add *.workgroup
+
+* Wed Dec 28 23:25:12 2016 +0100
+
+    Block *.localdomain in the local-additions.txt example
+
+* Wed Dec 28 23:24:28 2016 +0100
+
+    Add SRV records
+
+* Wed Dec 28 23:11:13 2016 +0100
+
+    Try to enable TFO even after the listen() call
+
+* Wed Dec 28 22:32:37 2016 +0100
+
+    Update the ChangeLog
+
+* Wed Dec 28 22:28:58 2016 +0100
+
+    Use 1 fastopen queue on MacOS, 5 on Linux
+
+* Wed Dec 28 22:18:41 2016 +0100
+
+    Cache entries according to the minimum TTL, not the first one observed
+
+* Wed Dec 28 22:09:47 2016 +0100
+
+    Sync msys-* build scripts with the xcompile build script
+
+* Wed Dec 28 21:49:54 2016 +0100
+
+    Use sodium_memzero() to zero structures before a call to free()
+
+* Wed Dec 28 21:44:11 2016 +0100
+
+    Why I love Rust
+
+* Wed Dec 28 21:09:07 2016 +0100
+
+    Udpate ChangeLog
+
+* Wed Dec 28 21:08:51 2016 +0100
+
+    Mention plugins that require the ldns library
+
+* Wed Dec 28 17:32:11 2016 +0100
+
+    Improve plugin documentation
+
+* Wed Dec 28 17:09:56 2016 +0100
+
+    4 extra bytes after the qname are fine in a question RR
+
+* Wed Dec 28 16:55:01 2016 +0100
+
+    free() allocated command-line arguments when using the config parser
+
+* Wed Dec 28 16:51:01 2016 +0100
+
+    Allow options_parse() to alter argc/argv
+
+* Wed Dec 28 16:27:12 2016 +0100
+
+    Plug a memory leak when deleting the cache
+
+* Wed Dec 28 15:48:34 2016 +0100
+
+    options_read_file(): ensure that the output buffer is zero-terminated
+
+* Wed Dec 28 14:14:42 2016 +0100
+
+    Update ChangeLog
+
+* Wed Dec 28 14:14:29 2016 +0100
+
+    /etc/dnscrypt-proxy.conf is probably required in the apparmor profile
+
+* Wed Dec 28 13:48:10 2016 +0100
+
+    crypto_box_*_afternm() computes the hash, so it can't be shared
+
+* Wed Dec 28 13:21:22 2016 +0100
+
+    Print favored versions, not serials
+
+* Wed Dec 28 11:59:27 2016 +0100
+
+    Downgrade "Unsupported certificate version" to LOG_INFO
+
+* Wed Dec 28 11:45:00 2016 +0100
+
+    Do not assume that ntohl() is available without extra libraries
+
+* Wed Dec 28 11:13:54 2016 +0100
+
+    libgcc_s* is required after all :/
+
+* Wed Dec 28 10:44:19 2016 +0100
+
+    Revert "Add -static-libgcc to mingw builds"
+
+
+* Wed Dec 28 10:43:55 2016 +0100
+
+    Revert "libgcc_s_*.dll should not be required any more"
+
+
+* Wed Dec 28 09:05:06 2016 +0100
+
+    Doc update
+
+* Wed Dec 28 08:45:24 2016 +0100
+
+    Block *.local and *.lan in domains-blacklist-local-additions.txt
+
+* Wed Dec 28 08:26:03 2016 +0100
+
+    Mention that LocalAddress doesn't work if systemd interferes
+
+* Wed Dec 28 00:48:48 2016 +0100
+
+    When using systemd, daemonization should apparently be disabled
+
+* Tue Dec 27 23:35:21 2016 +0100
+
+    Add domains-blacklist-local-additions.txt for... local additions
+
+* Tue Dec 27 22:22:12 2016 +0100
+
+    Fix more memory leaks on error path
+
+* Tue Dec 27 21:45:34 2016 +0100
+
+    Update the NEWS file for version 1.9.0
+
+* Tue Dec 27 21:21:25 2016 +0100
+
+    Update ChangeLog
+
+* Tue Dec 27 21:10:29 2016 +0100
+
+    Sign
+
+* Tue Dec 27 21:10:14 2016 +0100
+
+    d0wn-ua-ns1 is down
+
+* Tue Dec 27 21:07:39 2016 +0100
+
+    Change ifreenet location to unicast
+
+* Wed Dec 28 03:04:32 2016 +0700
+
+    Added d0wn Indonesia resolver (#522)
+
+    Added d0wn Indonesia resolver from https://dns.d0wn.biz
+
+* Tue Dec 27 20:54:04 2016 +0100
+
+    Plug leak on error path
+
+* Tue Dec 27 20:33:20 2016 +0100
+
+    Add Forward domains:(<any>) to:(<any>)
+
+* Tue Dec 27 20:08:11 2016 +0100
+
+    Mention that `--service-name` only makes sense with `--[un]install`
+
+* Tue Dec 27 20:05:21 2016 +0100
+
+    Typo
+
+* Tue Dec 27 20:02:15 2016 +0100
+
+    Remove `ServiceName` from the config file
+
+* Tue Dec 27 19:38:03 2016 +0100
+
+    Add a plugin to forward queries to specific resolvers
+
+* Tue Dec 27 12:26:04 2016 +0100
+
+    Plug some memory leaks on error path
+
+* Tue Dec 27 10:20:19 2016 +0100
+
+    line->str for consistency
+
+* Tue Dec 27 09:31:38 2016 +0100
+
+    Mention that ServiceName is only used when installing the service.
+
+* Tue Dec 27 09:25:43 2016 +0100
+
+    Also leverage `LT_LIBPREFIX`
+
+* Tue Dec 27 09:16:36 2016 +0100
+
+    Use `LT_MODULE_EXT` to retrieve the module extension
+
+    This renders the presence of .la files optional.
+
+* Mon Dec 26 22:05:58 2016 +0100
+
+    Correct the synopsis
+
+* Mon Dec 26 22:04:15 2016 +0100
+
+    Update the man page
+
+* Mon Dec 26 18:56:00 2016 +0100
+
+    Clarify
+
+* Mon Dec 26 18:52:20 2016 +0100
+
+    Add a port number in the ResolverAddress example
+
+* Mon Dec 26 18:47:37 2016 +0100
+
+    -Z should not imply -S
+
+* Mon Dec 26 18:45:40 2016 +0100
+
+    Allow ResolverAddress to override the CSV-provided address
+
+* Mon Dec 26 18:34:49 2016 +0100
+
+    Update the help message when no command-line options have been given
+
+* Mon Dec 26 10:40:16 2016 +0100
+
+    Move the blacklist generation script to a contrib folder
+
+* Mon Dec 26 10:38:52 2016 +0100
+
+    Toy might be misinterpreted
+
+* Sun Dec 25 23:22:34 2016 +0100
+
+    Add a sample script to generate lists of blacklisted domains
+
+* Sun Dec 25 11:42:51 2016 +0100
+
+    Shorten
+
+* Sun Dec 25 11:41:22 2016 +0100
+
+    Rephrase, remove double space
+
+* Sat Dec 24 19:11:30 2016 +0100
+
+    Final stop
+
+* Sat Dec 24 01:38:33 2016 +0100
+
+    Use the config file in the systemd service
+
+* Sat Dec 24 01:33:55 2016 +0100
+
+    Shorten even more
+
+* Sat Dec 24 01:32:05 2016 +0100
+
+    The disclaimer can be moved to the wiki, too
+
+* Sat Dec 24 01:30:44 2016 +0100
+
+    Remove a lot of the documentation. The Wiki is a better tool.
+
+* Sat Dec 24 00:27:31 2016 +0100
+
+    web sites -> websites
+
+* Fri Dec 23 23:17:28 2016 +0100
+
+    doc update
+
+* Fri Dec 23 23:15:43 2016 +0100
+
+    Doc update
+
+* Fri Dec 23 22:50:07 2016 +0100
+
+    Doc update
+
+* Fri Dec 23 22:41:05 2016 +0100
+
+    Use the config file in the .plist example
+
+* Fri Dec 23 22:26:31 2016 +0100
+
+    Typo
+
+* Fri Dec 23 21:49:20 2016 +0100
+
+    Update the minisign check example
+
+* Fri Dec 23 19:21:47 2016 +0300
+
+    Correct spelling (#521)
+
+* Fri Dec 23 11:50:37 2016 +0100
+
+    Update ChangeLog
+
+* Fri Dec 23 11:38:08 2016 +0100
+
+    SIGHUP now reloads the plugins
+
+    Useful to rotate logs, and to update blacklists
+
+* Fri Dec 23 11:15:03 2016 +0100
+
+    Make plugin_support.h more readable
+
+* Thu Dec 22 16:47:16 2016 +0100
+
+    Fix `--ignore-timestamps`
+
+    Reported by Toni Uhlig - Thanks!
+
+* Thu Dec 22 11:18:53 2016 +0100
+
+    Recommend checking the Daemonize option
+
+* Thu Dec 22 11:16:34 2016 +0100
+
+    Do not overwrite an existing dnscrypt-proxy.conf file
+
+* Thu Dec 22 11:09:14 2016 +0100
+
+    OSX -> MacOS and other minor changes to the documentation
+
+* Thu Dec 22 10:51:09 2016 +0100
+
+    Next will be 1.9.0 due to the major changes to the plugins
+
+* Thu Dec 22 10:48:06 2016 +0100
+
+    Just define some constants for clarity
+
+* Thu Dec 22 10:43:45 2016 +0100
+
+    empty -> is_empty
+
+* Thu Dec 22 10:38:45 2016 +0100
+
+    Lookup the frequent cache before the recent one
+
+* Thu Dec 22 10:28:27 2016 +0100
+
+    Add a second queue to the cache
+
+* Thu Dec 22 09:52:56 2016 +0100
+
+    up
+
+* Thu Dec 22 09:22:52 2016 +0100
+
+    Keep things together
+
+* Thu Dec 22 09:21:32 2016 +0100
+
+    Move code updating the cache to its own set of functions for clarity
+
+* Thu Dec 22 08:55:09 2016 +0100
+
+    Move the code that deallocates cache entries to its own function
+
+* Thu Dec 22 07:51:22 2016 +0100
+
+    Move a few definitions to example-cache.h
+
+* Thu Dec 22 07:44:11 2016 +0100
+
+    space->tab in Makefile.am
+
+* Thu Dec 22 03:02:00 2016 +0100
+
+    Do not change the TTL of OPT records
+
+    Also properly copy the casing of the original client query
+
+* Thu Dec 22 02:36:12 2016 +0100
+
+    Ignore the TTL of OPT records
+
+    And use the minimum TTL for empty zones.
+
+    Probably not as great as looking at the SOA, very likely better than
+    assuming the maximum TTL.
+
+* Wed Dec 21 18:14:12 2016 +0100
+
+    Only recommend one verification procedure
+
+* Wed Dec 21 18:12:37 2016 +0100
+
+    Bump the example version number
+
+* Thu Dec 22 01:58:33 2016 +0100
+
+    Add a simple DNS cache
+
+* Thu Dec 22 01:45:30 2016 +0100
+
+    Do not forget the file extension in plugins descriptions
+
+* Tue Dec 20 20:59:11 2016 +0100
+
+    Correct format string
+
+* Tue Dec 20 16:46:09 2016 +0100
+
+    Use lowercase hex digits
+
+* Tue Dec 20 16:45:03 2016 +0100
+
+    logging: add some common query types
+
+* Tue Dec 20 14:09:29 2016 +0100
+
+    libgcc_s_*.dll should not be required any more
+
+* Tue Dec 20 13:55:39 2016 +0100
+
+    Add -static-libgcc to mingw builds
+
+* Tue Dec 20 13:43:17 2016 +0100
+
+    Include <netinet/in.h> for sockaddr_* definitions
+
+* Tue Dec 20 13:41:18 2016 +0100
+
+    Add /usr/${TARGET}/bin/libgcc_s_* to the distributed file
+
+* Tue Dec 20 13:08:25 2016 +0100
+
+    Keep only one port per service
+
+    A way to list the set of ports every service can be reached at
+    would be great, and we really need to find a clean way to
+    support this in the future.
+
+* Tue Dec 20 11:33:51 2016 +0100
+
+    Add the ability to log queries using LTSV, too
+
+* Tue Dec 20 11:18:57 2016 +0100
+
+    Version bump even if we're not there yet
+
+* Tue Dec 20 11:15:15 2016 +0100
+
+    example-ldns-blocking: support the LTSV logging format
+
+* Tue Dec 20 10:34:18 2016 +0100
+
+    untab input
+
+* Tue Dec 20 10:29:09 2016 +0100
+
+    Major additions to the way [blocked] queries are logged
+
+* Tue Dec 20 09:25:11 2016 +0100
+
+    Print IPv6 addresses
+
+* Tue Dec 20 01:26:22 2016 +0100
+
+    Add the client IP address
+
+* Tue Dec 20 00:57:56 2016 +0100
+
+    `*.example.com` now matches example.com and x.example.com, not xexample.com
+
+* Mon Dec 19 11:54:25 2016 +0100
+
+    Complete rewrite of the blocking plugin to make it really fast
+
+    This was intended to be nothing but a simple example of a plugin.
+
+    However, this example turned out to be useful. And actually used.
+
+    So, let's get serious about it and do better than a linear scan
+    in order to match names and IPs.
+
+    A critbit-like data structure is a perfect fit for that kind of list.
+
+    So, split blacklists into 4 tries (5-bit variant of qp-tries):
+    - ips
+    - name prefixes
+    - name suffixes
+    - patterns that can be found anywhere
+
+    Linear scans could have been kept for case #4, but this is not a
+    common use case, and having a single data structure for everything
+    reduces bloat.
+
+    Suffix matching currently works the same way as prefix matching, with
+    keys and strings being reversed first. However, from a user perspective,
+    it makes sense to have `*.example.com` match `example.com` and
+    `www.example.com` but not `abcexample.com`. This will be addressed next.
+
+    Meanwhile, the plugin can now seamlessly handle very large blacklists.
+
+* Mon Dec 19 12:06:37 2016 +0100
+
+    Update ChangeLog for 1.8.1
+
+* Mon Dec 19 11:31:08 2016 +0100
+
+    host_only() -> trim_comments()
+
+* Mon Dec 19 10:25:50 2016 +0100
+
+    Version bump
+
+* Mon Dec 19 10:10:49 2016 +0100
+
+    Android: downgrade the NDK to 19 when building for platform 16
+
+    May fix the `signal()` (inlined prior to version 21) symbol being undefined.
+
+* Mon Dec 19 08:51:29 2016 +0100
+
+    Fix off-by-one in the registry key
+
+    Spotted by Christian Hermann
+
+* Sun Dec 18 15:17:27 2016 +0100
+
+    Document Control-C
+
+* Sat Dec 17 22:54:09 2016 +0100
+
+    Revert "dnscrypt.eu-nl-ipv6 has been down for a while"
+
+
+* Sat Dec 17 22:35:57 2016 +0100
+
+    sysconf -> dist_sysconf
+
+* Sat Dec 17 19:44:10 2016 +0100
+
+    Update ChangeLog
+
+* Sat Dec 17 19:43:43 2016 +0100
+
+    Do not require wine
+
+* Sat Dec 17 19:40:21 2016 +0100
+
+    Documentation improvements
+
+* Sat Dec 17 19:32:57 2016 +0100
+
+    Mention that the config file requires dnscrypt-proxy 1.8.0
+
+* Sat Dec 17 19:32:24 2016 +0100
+
+    Improve the Windows documentation
+
+* Sat Dec 17 19:13:48 2016 +0100
+
+    Wndows doc/news update
+
+* Sat Dec 17 19:13:35 2016 +0100
+
+    Fix the vendor-specific include path
+
+* Sat Dec 17 19:06:37 2016 +0100
+
+    Update ChangeLog
+
+* Sat Dec 17 19:05:12 2016 +0100
+
+    Sync the Android build scripts with libsodium
+
+* Sat Dec 17 18:43:36 2016 +0100
+
+    Require iOS6
+
+* Sat Dec 17 18:42:58 2016 +0100
+
+    Compat with minimal builds of libsodium
+
+* Sat Dec 17 18:41:45 2016 +0100
+
+    The CoreServices framework is probably not required any more
+
+* Sat Dec 17 18:41:14 2016 +0100
+
+    Do not recommend minimal libsodium builds any more, for xchacha20
+
+* Sat Dec 17 18:21:34 2016 +0100
+
+    Sign
+
+* Sat Dec 17 18:20:48 2016 +0100
+
+    Added d0wn Italy's resolver (#511)
+
+    Added d0wn Italy's resolver - from https://dns.d0wn.biz
+
+* Sat Dec 17 18:19:15 2016 +0100
+
+    Only keep vendor-neutral options in the configuration file
+
+* Sat Dec 17 18:15:59 2016 +0100
+
+    Update NEWS
+
+* Sat Dec 17 17:32:58 2016 +0100
+
+    The query logs is usually what people want, not the server log
+
+* Sat Dec 17 17:29:00 2016 +0100
+
+    More explicit default resolver
+
+* Sat Dec 17 17:25:27 2016 +0100
+
+    Inverted logic
+
+* Sat Dec 17 17:19:38 2016 +0100
+
+    lto still doesn't work reliably on mingw
+
+* Sat Dec 17 16:18:17 2016 +0100
+
+    Add a cross-compilation script for win32/win64 from Arch Linux
+
+* Sat Dec 17 13:46:01 2016 +0100
+
+    Bump example version
+
+* Sat Dec 17 13:49:19 2016 +0100
+
+    Deconstify
+
+* Sat Dec 17 12:46:30 2016 +0100
+
+    Windows: add a --install-with-config-file= command-line option
+
+* Sat Dec 17 11:39:01 2016 +0100
+
+    Avoid snprintf() in plugins
+
+* Sat Dec 17 00:08:45 2016 +0100
+
+    Update ChangeLog
+
+* Sat Dec 17 00:02:42 2016 +0100
+
+    The OpenDNS password can finally be loaded from a file
+
+    The environment variable remains supported for backwards compatibility,
+    but it is not documented any more.
+
+* Sat Dec 17 00:02:15 2016 +0100
+
+    Do not use two identification methods simultaneously
+
+* Fri Dec 16 23:41:16 2016 +0100
+
+    Looks like the password is just called "device"
+
+* Fri Dec 16 23:16:43 2016 +0100
+
+    Keep IgnoreTimeStamps commented in order to discourage its use
+
+* Fri Dec 16 23:01:28 2016 +0100
+
+    Remove down d0wn resolvers
+
+* Fri Dec 16 22:23:40 2016 +0100
+
+    Sort
+
+* Fri Dec 16 22:18:59 2016 +0100
+
+    Add a sample configuration file
+
+* Fri Dec 16 22:18:09 2016 +0100
+
+    Typo in the man page
+
+* Fri Dec 16 11:34:39 2016 +0100
+
+    Reuse the pure-ftpd config file parser
+
+* Fri Dec 16 11:31:46 2016 +0100
+
+    Configuration file (#454)
+
+    * Add option -c to load configuration from a file.
+    Add option -C to print the current configuration to stdout.
+    Properly nul-terminate file_buf in options_read_file.
+
+    * Document -c, -C and the configuration file.
+
+    * Regenerate dnscrypt-proxy.8 from dnscrypt-proxy.8.markdown with ronn.
+
+* Wed Dec 14 12:02:57 2016 +0100
+
+    Update ChangeLog
+
+* Tue Dec 13 12:00:14 2016 +0100
+
+    New option `--service-name` to set the Windows service name
+
+* Sun Dec 11 20:56:23 2016 +0100
+
+    Version bump, update ChangeLog/NEWS
+
+* Sun Dec 11 20:33:26 2016 +0100
+
+    Use strdup() for resolver parameters supplied manually
+
+* Sun Dec 11 20:19:52 2016 +0100
+
+    Properly print the minor protocol version
+
+* Sun Dec 11 19:28:14 2016 +0100
+
+    Favor newer versions of the protocol
+
+* Sun Dec 11 01:31:45 2016 +0100
+
+    Keep a copy of the non-signed certificate data in bincerts
+
+* Sun Dec 11 01:02:41 2016 +0100
+
+    Add preliminary support for xchacha20poly1305
+
+* Sun Dec 11 00:09:12 2016 +0100
+
+    Add polyfills for ancient libsodium versions
+
+* Sat Dec 10 23:10:58 2016 +0100
+
+    Update ChangeLog
+
+* Sat Dec 10 22:26:20 2016 +0100
+
+    More hacks for Debian
+
+* Sat Dec 10 21:32:22 2016 +0100
+
+    Stop checking for 6jack
+
+* Sat Dec 10 21:28:09 2016 +0100
+
+    Work around Debian shipping an antiquated version of libsodium
+
+* Sat Dec 10 21:13:00 2016 +0100
+
+    Do not use the confusing box API any more.
+
+    This requires libsodium >= 1.0.2
+
+* Sat Dec 10 19:57:14 2016 +0100
+
+    Add timestamps to syslogless logs
+
+* Sat Dec 10 19:52:17 2016 +0100
+
+    Add timestamps to log files
+
+* Sat Dec 10 19:27:26 2016 +0100
+
+    Document --logfile
+
+* Sat Dec 10 17:13:14 2016 +0100
+
+    Make the plugin descriptions more consistent
+
+* Sat Dec 10 14:50:47 2016 +0100
+
+    Add a --logfile option to the ldns-blocking plugin
+
+* Sat Dec 10 10:31:49 2016 +0100
+
+    Add ifreenet.online DNS record for its public key
+
+* Sat Dec 10 01:35:17 2016 +0100
+
+    sign
+
+* Sat Dec 10 04:04:22 2016 +0330
+
+    Update dnscrypt-resolvers.csv (#506)
+
+    Added new public dnscrypt by ifreenet.online
+
+* Fri Dec 9 21:12:11 2016 +0100
+
+    cloudns is experiencing issues
+
+* Sun Dec 4 10:39:25 2016 +0100
+
+    Add DNSCryptClient
+
+* Mon Nov 28 23:35:28 2016 +0100
+
+    Temporarily remove d0wn-dk-ns1
+
+* Wed Nov 23 22:11:05 2016 +0100
+
+    Remove dead resolvers
+
+* Sat Nov 19 09:39:49 2016 +0100
+
+    free() more things on exit
+
+* Sat Nov 19 09:21:48 2016 +0100
+
+    Install SIGINT & SIGTERM handlers
+
+* Sat Nov 19 09:20:37 2016 +0100
+
+    Regression from last commit
+
+* Sat Nov 19 09:18:38 2016 +0100
+
+    Fix inverted logic when shutting down listeners
+
+* Mon Nov 14 23:31:01 2016 +0100
+
+    Revert ipredator key change
+
+
+* Mon Nov 14 15:56:56 2016 +0100
+
+    Mention when servers use a long key rotation period
+
+* Mon Nov 14 15:20:00 2016 +0100
+
+    Sign
+
+Merge: d5c0ea8 cb19477
+* Mon Nov 14 15:19:40 2016 +0100
+
+    Update dnscrypt-resolvers.csv (#497)
+
+    update Ipredator.se Provider public key
+
+* Mon Nov 14 14:27:16 2016 +0100
+
+    Update dnscrypt-resolvers.csv
+
+    update Ipredator.se Provider public key
+
+* Sun Nov 13 22:40:02 2016 +0100
+
+    d0wn and OpenNIC divorced
+
+* Sat Nov 12 23:52:34 2016 +0100
+
+    dnscrypt.eu-nl-ipv6 has been down for a while
+
+* Sat Nov 12 23:48:29 2016 +0100
+
+    New key for d0wn-lv-ns1
+
+* Sat Nov 5 22:14:21 2016 +0100
+
+    Yet another key change, for d0wn-tz-ns1
+
+* Sat Nov 5 21:37:15 2016 +0100
+
+    Sign
+
+* Sat Nov 5 21:36:05 2016 +0100
+
+    New key for d0wn-gr-ns1
+
+* Tue Nov 1 23:08:18 2016 +0100
+
+    New resolver in New York: dyne.org
+
+* Tue Nov 1 23:04:10 2016 +0100
+
+    New key for d0wn-random-ns2
+
+* Mon Oct 31 13:46:39 2016 +0100
+
+    New key for d0wn-de-ns1
+
+* Thu Oct 27 15:09:57 2016 +0200
+
+    iPredator supports DNSSEC
+
+* Wed Oct 26 22:59:28 2016 +0200
+
+    Sign
+
+* Wed Oct 26 22:58:57 2016 +0200
+
+    Updated file with new D0wn's DNS server in Spain (#488)
+
+* Tue Oct 25 22:56:01 2016 +0200
+
+    0x00 0x02 is reserved for X25519-XChacha20Poly1305
+
+* Mon Oct 24 10:13:11 2016 +0200
+
+    Update the list of resolvers
+
+* Tue Oct 25 10:04:08 2016 +0200
+
+    Check that the resolvers list doesn't contain duplicates
+
+* Sat Oct 22 02:49:12 2016 +0200
+
+    Remove temporarily d0wn resolvers
+
+* Mon Oct 17 18:06:13 2016 +0200
+
+    Add dnscrypt.org-fr URL
+
+* Thu Oct 13 22:57:27 2016 +0200
+
+    Try to use LibreSSL before OpenSSL
+
+* Thu Oct 13 22:43:11 2016 +0200
+
+    Add explit paths to OpenSSL for Homebrew
+
+* Thu Oct 13 21:35:24 2016 +0200
+
+    Make the example-ldns-blocking.c changes consistent with the rest of the code
+
+* Thu Oct 13 22:35:12 2016 +0300
+
+    Move apply_block_domains to the pre_filter event group (#485)
+
+* Tue Oct 11 15:24:08 2016 +0200
+
+    Welcome back, dnscrypt.eu-dk
+
+* Mon Oct 10 23:49:31 2016 +0200
+
+    Temporarily remove unresponsive resolvers
+
+* Mon Oct 10 23:41:40 2016 +0200
+
+    Sign
+
+* Mon Oct 10 23:35:45 2016 +0200
+
+    Avoid duplicate descriptions
+
+* Tue Oct 11 00:32:41 2016 +0300
+
+    update Adguard`s server list (#483)
+
+* Mon Oct 10 14:29:58 2016 +0200
+
+    Re-add update-binary to the git repository
+
+* Sun Oct 9 11:26:02 2016 +0200
+
+    Remove quite a few resolvers that are currently down
+
+* Fri Oct 7 23:23:13 2016 +0200
+
+    Sign
+
+* Fri Oct 7 22:22:31 2016 +0100
+
+    Remove 4ARMED server due to decommissioning (#482)
+
+* Mon Oct 3 07:25:31 2016 +0200
+
+    Remove ventricle.us cjdns & IPv6 addresses
+
+* Sun Oct 2 22:43:31 2016 +0200
+
+    adguard-family doesn't seem to work any more
+
+* Sun Oct 2 19:00:13 2016 +0200
+
+    Shorten the name of the ventricle servers
+
+* Sun Oct 2 12:27:26 2016 -0400
+
+    Added dnscrypt.ventricle.us (#478)
+
+* Sun Oct 2 09:54:24 2016 +0200
+
+    fvz-rec-gb-lon-03 is down
+
+* Sun Oct 2 09:52:52 2016 +0200
+
+    Sign
+
+* Sun Oct 2 02:39:18 2016 -0500
+
+    added dns-freedom (#476)
+
+* Tue Sep 27 01:07:12 2016 +0200
+
+    d0wn-lv-ns2 and d0wn-se-ns1 are down
+
+* Tue Sep 27 01:05:25 2016 +0200
+
+    Nits
+
+* Fri Sep 23 16:44:18 2016 +0200
+
+    Add Adguard
+
+* Fri Sep 23 16:26:21 2016 +0200
+
+    In the CSV files, ignore entries with an excessively large number of columns
+
+* Sat Sep 10 10:49:11 2016 +0200
+
+    Remove dead fvz resolvers
+
+* Mon Sep 5 12:30:48 2016 +0200
+
+    Revert dnscrypt.nu addition - The resolver itself doesn't seem to resolve
+
+* Mon Sep 5 12:22:10 2016 +0200
+
+    Sign
+
+* Mon Sep 5 12:21:50 2016 +0200
+
+    Add dnscrypt.nu
+
+* Tue Aug 30 09:06:08 2016 +0200
+
+    sign
+
+* Tue Aug 30 09:05:53 2016 +0200
+
+    Remove offline resolvers
+
+* Tue Aug 30 07:42:08 2016 +0100
+
+    update dnscrypt servers: dns.d0wn.biz (#455)
+
+* Thu Aug 25 15:24:22 2016 +0200
+
+    ldns-blocking: don't consider empty files as an error
+
+* Sat Aug 13 12:52:24 2016 +0200
+
+    fvz-rec-de-fra-01 and fvz-rec-ie-du-01 are not responsive
+
+* Sat Aug 13 12:48:51 2016 +0200
+
+    Android: distribute the update-binary signature, not binary
+    Also distribute updater-script
+
+* Wed Aug 10 15:18:45 2016 +0200
+
+    libevent: Check for Mac OS X 10.4 kqueue bug properly
+
+* Mon Aug 1 00:52:13 2016 +0200
+
+    ./autogen.sh is not required with libsodium-stable
+
+* Sun Jul 31 12:47:19 2016 +0200
+
+    Do not create `libevent-modified/sample/Makefile`
+
+* Sun Jul 31 12:42:01 2016 +0200
+
+    Update ChangeLog
+
 * Sun Jul 31 12:19:15 2016 +0200
 
     Builds for Win64 are now available
