--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,45 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_2-22E0j9527  (5-January-2016)
+* NEW: qos: new traditional qos implementation
+* NEW: dnscrypt: add dnscrypt support 1.9.0
+* NEW: dnscrypt: add support for second dnscrypt resolver and ipv6
+* NEW: dnscrypt: allow ARM based routers to use dnscrypt for non-VPN clients
+* NEW: kernel-arm: backport support for route_localnet
+* NEW: webui: add option for strict DNSSEC enforcement
+* NEW: add dnscrypt resolvers updater script
+- CHANGED: build: (backport) preserve datestamp of ca-bundle.crt
+- CHANGED: curl: (backport) enable IPv6 support
+- CHANGED: dnsmasq: (backport) add --dns-loop-detect support
+- CHANGED: nano: (backport) update to 2.7.1
+- CHANGED: openvpn: (backport) change the default OpenVPN server cipher to the more secure AES-128-CBC
+- CHANGED: openvpn: update to 2.3.14
+- CHANGED: rc: (backport) move dualwan static routes to a lower priority, so VPN policy rules will have priority
+- CHANGED: webui: (backport) implement QoS classification statistics page
+* CHANGED: defaults: change byte limits for default qos rules
+* CHANGED: mtd: skip bad blocks during erase for ARM
+* CHANGED: webui: add resolver and port checks for dnscrypt instances
+* CHANGED: webui: alert options which will make DNSCrypt not be used
+* CHANGED: webui: change syslog message level selection to standard syntax
+* CHANGED: webui: convert qos rules with specified any byte count to rules with no byte count
+* CHANGED: webui: don't explicity restart_dnsmasq if dnscrypt parms change
+* CHANGED: webui: prevent use of registered domain names for router domain
+- FIXED: httpd: (ASUS) fixed security vulnerabilities regarding XSS and CSRF
+- FIXED: rc: (backport) merge host and domain names when building the OpenVPN exportable client config if using Namecheap as DDNS
+- FIXED: webui: add chart.min.js to mime handler
+- FIXED: webui: (backport) report error if importing an ovpn file with a missing/invalid key or certificate
+- FIXED: dropbear: only listen on lan_ipaddr
+- FIXED: httpd: fix potential buffer overruns
+* FIXED: openvpn: do not force set status at end of start when not needed
+* FIXED: openvpn: fix multiple issues in starting/stopping vpn services
+* FIXED: openvpn: handle dnscrypt dns in update_resolvconf
+* FIXED: openvpn: set up firewall before starting openvpn server and client
+* FIXED: qos: fix qos_stats to not round bytes transferred
+* FIXED: updown: block ipv6 dns queries with vpn active based on ipv6 dns mode
+* FIXED: dropbear: upstream fixes for variable initialization
+
+
 374.43_2-20ECj9527  (20-November-2016)
 * CHANGED: iptables: support --set-mark mark[/mask] on MIPS routers
 
