--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,11 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_2-23BCj9527  (9-February-2017)
+* CHANGED: openvpn: increase wait time for time sync complete to accomodate dualwan
+* FIXED: vpnrouting: prevent vpn routes already in table main from being copied to vpn table
+
+
 374.43_2-23BAj9527  (8-February-2017)
 * CHANGED: wanduck: start_firewall instead of nat_rules when switching or restoring wan line
 * CHANGED: wanduck: add additional diagnostic messages and capabilities
